// Gradle settings and tasks common to all SkyControl subprojects

apply plugin: 'java'

ext { // current versions of various libraries:
    jcommanderVersion = '1.81'
    heartVersion = '7.2.0'
    jme3utilitiesniftyVersion = '0.9.24'
    jme3utilitiesuiVersion = '0.9.6'
    jme3Version = '3.5.0-stable'
    skycontrolVersion = '1.0.1-SNAPSHOT'
}

sourceCompatibility = JavaVersion.VERSION_1_7
targetCompatibility = JavaVersion.VERSION_1_8

tasks.withType(JavaCompile) { // Java compile-time options:
    options.compilerArgs << '-Xdiags:verbose'
    options.compilerArgs << '-Xlint:unchecked'
    options.deprecation = true
    options.encoding = 'UTF-8'
}

tasks.withType(JavaExec) { // Java runtime options:
    classpath sourceSets.main.runtimeClasspath
    //debug true
    enableAssertions true
    //jvmArgs '-verbose:gc'
    //jvmArgs '-Xbatch'
    //jvmArgs '-Xms512m', '-Xmx512m'
    //jvmArgs '-XX:+PrintCompilation'
    //jvmArgs '-XX:+UseConcMarkSweepGC'
    jvmArgs '-XX:+UseG1GC', '-XX:MaxGCPauseMillis=10'
}

repositories {
    //mavenLocal()
    mavenCentral()
}
